Внесение исправлений в верстку ч4

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
             </ul>
           </div>
         </nav>
-        <a href="index.html" class="page-header__logo" >
+        <a href="index.html" class="page-header__logo" aria-label="Главная страница">
           <svg version="1.0" id="page-header__logo-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="186.643px" height="96.425px" viewBox="0 0 186.643 96.425" enable-background="new 0 0 186.643 96.425" xml:space="preserve">
             <g>
               <g class="page-header__blue-background">
@@ -250,16 +250,16 @@
                 <path fill="#FFFFFF" d="M297.238,2.482h19.454l35.636,45.757h0.196V2.482h19.453v74.839h-19.453L316.89,31.465h-0.197v45.856 h-19.454V2.482z"/>
                 <path fill="#FFFFFF" d="M407.345,64.319l-5.16,13.002h-20.646l28.785-74.839h21.242l28.188,74.839h-20.745l-4.862-13.002H407.345z M420.945,25.609h-0.199l-8.039,23.824h16.178L420.945,25.609z"/>
               </g>
-          </svg>
-        </section>
-        <section class="welcome-text welcome-text--form">
-          <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-          <p class="welcome-text__about">Оставьте свой отзыв</p>
-          <p class="welcome-text__reasons welcome-text__reasons--narrow">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
-        </section>
-        <form class="review-form" action="https://echo.htmlacademy.ru" method="POST">
-          <div class="introduce">
-            <p class="introduce__caption review-form__title">Представьтесь:</p>
+            </svg>
+          </section>
+          <section class="welcome-text welcome-text--form">
+            <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+            <p class="welcome-text__about">Оставьте свой отзыв</p>
+            <p class="welcome-text__reasons welcome-text__reasons--narrow">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
+          </section>
+          <form class="review-form" action="https://echo.htmlacademy.ru" method="POST">
+            <div class="introduce">
+              <p class="introduce__caption review-form__title">Представьтесь:</p>
             <ul class="introduce__elements review-form__elements">
               <li class="introduce__text-input-element">
                 <label class="introduce__label" for="introduce-text__name">Имя*:</label>
@@ -298,15 +298,15 @@
             <p class="impression__caption review-form__title">Ваше общее впечатление:</p>
             <ul class="impression__elements review-form__elements">
               <li class="impression__radio-button-element">
-                <input class="impression__radio" type="radio" name="impression-group" id="impression__positive" value="positive" checked>
+                <input class="impression__radio .visually-hidden" type="radio" name="impression-group" id="impression__positive" value="positive" checked>
                 <label class="impression__label" for="impression__positive">Скорее положительное</label>
               </li>
               <li class="impression__radio-button-element">
-                <input class="impression__radio" type="radio" name="impression-group" id="impression__negative" value="negative">
+                <input class="impression__radio .visually-hidden" type="radio" name="impression-group" id="impression__negative" value="negative">
                 <label class="impression__label" for="impression__negative">Скорее отрицательное</label>
               </li>
               <li class="impression__radio-button-element">
-                <input class="impression__radio" type="radio" name="impression-group" id="impression__difficult" value="difficult">
+                <input class="impression__radio .visually-hidden" type="radio" name="impression-group" id="impression__difficult" value="difficult">
                 <label class="impression__label" for="impression__difficult">Затрудняюсь ответить</label>
               </li>
             </ul>
@@ -315,19 +315,19 @@
             <p class="attractions__caption review-form__title">Посещенные достопримечательности:</p>
               <ul class="attractions_elements review-form__elements">
                 <li class="attractions__checkbox-element">
-                  <input class="attractions__checkbox" type="checkbox" name="attractions-devil-bridge" id="attractions__devil-bridge" value="devil-bridge" checked>
+                  <input class="attractions__checkbox .visually-hidden" type="checkbox" name="attractions-devil-bridge" id="attractions__devil-bridge" value="devil-bridge" checked>
                   <label class="attractions__label" for="attractions__devil-bridge">Мост Дьявола</label>
                 </li>
                 <li class="attractions__checkbox-element">
-                  <input class="attractions__checkbox" type="checkbox" name="attractions-bell-mountine" id="attractions__bell-mountine" value="bell-mountine" checked>
+                  <input class="attractions__checkbox .visually-hidden" type="checkbox" name="attractions-bell-mountine" id="attractions__bell-mountine" value="bell-mountine" checked>
                   <label class="attractions__label" for="attractions__bell-mountine">Гора-Колокол</label>
                 </li>
                 <li class="attractions__checkbox-element">
-                  <input class="attractions__checkbox" type="checkbox" name="attractions-slide-park" id="attractions__slide-park" value="slide-park" checked>
+                  <input class="attractions__checkbox .visually-hidden" type="checkbox" name="attractions-slide-park" id="attractions__slide-park" value="slide-park" checked>
                   <label class="attractions__label" for="attractions__slide-park">Слайд-парк</label>
                 </li>
                 <li class="attractions__checkbox-element">
-                  <input class="attractions__checkbox" type="checkbox" name="attractions-red-rocks" id="attractions__red-rocks" value="red-rocks">
+                  <input class="attractions__checkbox .visually-hidden" type="checkbox" name="attractions-red-rocks" id="attractions__red-rocks" value="red-rocks">
                   <label class="attractions__label" for="attractions__red-rocks">Красные скалы</label>
                 </li>
               </ul>
@@ -361,17 +361,17 @@
         <p class="page-footer__hashteg">#visitsedona</p>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">
+            <a class="social__link social__link--twitter" href="#" aria-label="Профиль в twitter">
               <svg class="social__link-icon" width="18" height="15"><use xlink:href="#icon-twitter"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">
+            <a class="social__link social__link--facebook" href="#" aria-label="Профиль в facebook">
               <svg class="social__link-icon" width="9" height="19"><use xlink:href="#icon-facebook"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">
+            <a class="social__link social__link--youtube" href="#" aria-label="Профиль в youtube">
               <svg class="social__link-icon" width="20" height="14"><use xlink:href="#icon-youtube"></use></svg">
             </a>
           </li>
