--- a/source/photo.html
+++ b/source/photo.html
@@ -40,7 +40,7 @@
             </ul>
           </div>
         </nav>
-        <a href="index.html" class="page-header__logo" >
+        <a href="index.html" class="page-header__logo" aria-label="Главная страница">
           <svg version="1.0" id="page-header__logo-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="186.643px" height="96.425px" viewBox="0 0 186.643 96.425" enable-background="new 0 0 186.643 96.425" xml:space="preserve">
             <g>
               <g class="page-header__blue-background">
@@ -260,7 +260,7 @@
         <section class="photos">
           <ul class="photos__list gallary">
             <li class="gallary__item gallary__item--large">
-              <a href="#" class="gallary__image-link">
+              <a href="big-photo.html" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-sunset-desktop@1x.webp 1x, ./img/photo-sunset-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-sunset-tablet@1x.webp 1x, ./img/photo-sunset-tablet@2x.webp 2x">
@@ -282,7 +282,7 @@
               </div>
             </li>
             <li class="gallary__item">
-              <a href="#" class="gallary__image-link">
+              <a href="big-photo.html" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-cactus-desktop@1x.webp 1x, ./img/photo-cactus-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-cactus-tablet@1x.webp 1x, ./img/photo-cactus-tablet@2x.webp 2x">
@@ -304,7 +304,7 @@
               </div>
             </li>
             <li class="gallary__item">
-              <a href="#" class="gallary__image-link">
+              <a href="big-photo.html" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-roads-desktop@1x.webp 1x, ./img/photo-roads-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-roads-tablet@1x.webp 1x, ./img/photo-roads-tablet@2x.webp 2x">
@@ -327,7 +327,7 @@
               </div>
             </li>
             <li class="gallary__item">
-              <a href="#" class="gallary__image-link">
+              <a href="big-photo.html" class="gallary__image-link">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop@1x.webp 1x, ./img/photo-bridge-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-bridge-tablet@1x.webp 1x, ./img/photo-bridge-tablet@2x.webp 2x">
@@ -367,14 +367,14 @@
             <img class="video-player__movie" src="./img/video-mobile@1x.jpg" srcset="./img/video-mobile@2x.jpg 2x" alt="Карта Седоны">
           </picture>
           <div class="video-player__controls">
-            <button class="video-player__button video-player__button--replay" type="button">
+            <button class="video-player__button video-player__button--replay" type="button" aria-label="Повтор">
               <svg class="video-player__button-icon" width="16" height="20"><use xlink:href="#icon-video-replay"></use></svg>
             </button>
             <div class="video-player__progress"></div>
-            <button class="video-player__button video-player__button--subtitles" type="button">
+            <button class="video-player__button video-player__button--subtitles" type="button" aria-label="Субтитры">
               <svg class="video-player__button-icon" width="32" height="20"><use xlink:href="#icon-video-subtitles"></use></svg>
             </button>
-            <button class="video-player__button video-player__button--fullscreen" type="button">
+            <button class="video-player__button video-player__button--fullscreen" type="button" aria-label="На весь экран">
               <svg class="video-player__button-icon" width="20" height="20"><use xlink:href="#icon-video-fullscreen"></use></svg>
             </button>
           </div>
@@ -385,17 +385,17 @@
         <p class="page-footer__hashteg">#visitsedona</p>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">
+            <a class="social__link social__link--twitter" href="#" aria-label="Профиль в twitter">
               <svg class="social__link-icon" width="18" height="15"><use xlink:href="#icon-twitter"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">
+            <a class="social__link social__link--facebook" href="#" aria-label="Профиль в facebook">
               <svg class="social__link-icon" width="9" height="19"><use xlink:href="#icon-facebook"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">
+            <a class="social__link social__link--youtube" href="#" aria-label="Профиль в youtube">
               <svg class="social__link-icon" width="20" height="14"><use xlink:href="#icon-youtube"></use></svg>
             </a>
           </li>
