Внесение исправлений в верстку перед защитой 2.1

--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
             <svg class="main-nav__button-icon main-nav__button-icon--open" width="23" height="22"><use xlink:href="#icon-menu"></use></svg>
             <svg class=" main-nav__button-icon main-nav__button-icon--close main-nav__button-icon--hide" width="22" height="22"><use xlink:href="#icon-cross"></use></svg>
           </button>
-          <div class="main-nav__wrapper .main-nav__wrapper--hide">
+          <div class="main-nav__wrapper main-nav__wrapper--hide">
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--left">
                 <a href="index.html">Главная</a href="index.html">
